<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/save_note"
    android:icon="@drawable/ic_save_white_24dp"
    android:title="Save"
    app:showAsAction="ifRoom"/>
</menu>